# spadesx-plugin

./: .gitignore  CMakeLists.txt  Makefile  PluginAPI.h  README.md  template_plugin.c
.github/workflows/: build.yml
